# python_opc_module

./: CMakeLists.txt  README.md  com_funcs.cpp  module.h  module_main.cpp  opcenumquery.cpp  opcserver.cpp
opc/: opcerror.h
